--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "fcc-exercise-tracker",
   "version": "0.1.0",
   "description": "A REST API project, part of Free Code Camp's curriculum",
-  "main": "index.js",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./src/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -15,7 +15,7 @@
     "validator": "^13.7.0"
   },
   "repository": {
-    "url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
+    "url": "https://github.com/jephthah-orobia/fcc-project-exercisetracker"
   },
   "license": "MIT",
   "keywords": [
